@@ -46,10 +46,10 @@ Plugin for Mozilla
 <p>
 <a href="http://www.mozilla.org/">Mozilla</a> is open-source web browser,
 designed for standards compliance, performance and portability.  The
-<a href="http://www.mozilla.org/oji/">Open JVM Integration project</a>
-(OJI) is a Mozilla sub-project, and is working to extend the browser
-to allow Java virtual machines to be plugged into Mozilla.  A gij
-based plugin would be very nice indeed (gijzilla?).
+Open JVM Integration project (OJI) is a Mozilla sub-project, and is
+working to extend the browser to allow Java virtual machines to be
+plugged into Mozilla.  A gij based plugin would be very nice indeed
+(gijzilla?).
 </p>
 
 <br />
