@@ -1,3 +1,7 @@
+2008-10-25  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* projects.html: Remove broken link to http://www.mozilla.org/oji/.
+
 2008-03-22  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* projects.html: Remove broken link to benchmarks compiled by
